// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compileUpsert UpdateDate field in SET clause should compile upsert with UpdateDate field 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
    2024-06-01T00:00:00.000Z,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total", "updated_at") VALUES ($1, $2, $3, $4) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total", "updated_at" = NOW() RETURNING *",
}
`;

exports[`compileUpsert Version field in SET clause should compile upsert with version field 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
    2,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total", "version") VALUES ($1, $2, $3, $4) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total", "version" = "shop"."orders"."version" + 1 RETURNING *",
}
`;

exports[`compileUpsert all special fields combined should compile upsert with Version, CreateDate, and UpdateDate fields 1`] = `
{
  "params": [
    "order-uuid-2",
    "shipped",
    3,
    2024-01-01T00:00:00.000Z,
    2024-06-01T00:00:00.000Z,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "version", "created_at", "updated_at") VALUES ($1, $2, $3, $4, $5) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "version" = "shop"."orders"."version" + 1, "updated_at" = NOW() RETURNING *",
}
`;

exports[`compileUpsert basic upsert structure should compile a basic upsert with single PK 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total") VALUES ($1, $2, $3) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total" RETURNING *",
}
`;

exports[`compileUpsert basic upsert structure should produce INSERT INTO ... VALUES ... ON CONFLICT ... DO UPDATE SET ... RETURNING * 1`] = `"INSERT INTO "shop"."orders" ("id", "status", "total") VALUES ($1, $2, $3) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total" RETURNING *"`;

exports[`compileUpsert conflict target (ON CONFLICT columns) should use composite primary key in conflict target 1`] = `
{
  "params": [
    "o1",
    "p1",
    3,
  ],
  "text": "INSERT INTO "order_items" ("order_id", "product_id", "quantity") VALUES ($1, $2, $3) ON CONFLICT ("order_id", "product_id") DO UPDATE SET "quantity" = EXCLUDED."quantity" RETURNING *",
}
`;

exports[`compileUpsert conflictColumns option — custom conflict target conflictColumns with a single unique column produces correct SQL structure 1`] = `
{
  "params": [
    "prod-1",
    "SKU-ABC",
    "Widget",
    9.99,
  ],
  "text": "INSERT INTO "catalog"."products" ("id", "sku", "title", "price") VALUES ($1, $2, $3, $4) ON CONFLICT ("sku") DO UPDATE SET "sku" = EXCLUDED."sku", "title" = EXCLUDED."title", "price" = EXCLUDED."price" RETURNING *",
}
`;

exports[`compileUpsert conflictColumns option — custom conflict target should support multiple conflictColumns for a composite unique index 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total") VALUES ($1, $2, $3) ON CONFLICT ("status", "total") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total" RETURNING *",
}
`;

exports[`compileUpsert conflictColumns option — custom conflict target should use provided conflictColumns instead of PK columns 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total") VALUES ($1, $2, $3) ON CONFLICT ("status") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total" RETURNING *",
}
`;

exports[`compileUpsert relation FK columns should include owning-side FK columns from dehydrateEntity in INSERT and SET clause 1`] = `
{
  "params": [
    "order-uuid-1",
    "pending",
    99.99,
    "cust-uuid-1",
  ],
  "text": "INSERT INTO "shop"."orders" ("id", "status", "total", "customerId") VALUES ($1, $2, $3, $4) ON CONFLICT ("id") DO UPDATE SET "status" = EXCLUDED."status", "total" = EXCLUDED."total", "customerId" = EXCLUDED."customerId" RETURNING *",
}
`;
